config(vite): enable server for preview in mobile fix(layout): center align cocktail list and adjust height for improved layout responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -523,6 +523,7 @@ main {
 .cocktail-list {
    display: flex;
    flex-direction: column;
+   align-items: center;
    gap: 1.5em;
 }
 
@@ -636,7 +637,8 @@ main {
    gap: 5vw;
    overflow-x: auto;
    overflow-y: hidden;
-   height: calc(100vh - 320px);
+   /* height: calc(100vh - 320px); */
+   height: calc(100vh - 180px);
    padding: 1em 10vw 1em 10vw;
    scroll-snap-type: x mandatory;
    scrollbar-width: none;
@@ -664,7 +666,8 @@ main {
    margin: 1em 0;
    padding: 1em;
    min-height: 400px; 
-   max-width: 70%;
+   max-width: 80%;
+   justify-self: center;
    align-self: center;
 }
 
